--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+<img src="https://octodex.github.com/images/octocat-de-los-muertos.jpg" alt="Octocat De Los Muertos" />
+  
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Annewies. This is my website!</p>
