--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/octocat-de-los-muertos.jpg" alt="Octocat De Los Muertos" />
+<img src="https://octodex.github.com/images/octocat-de-los-muertos.jpg" id="octocat" alt="Octocat De Los Muertos" />
   
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
