--- a/pages/index.html
+++ b/pages/index.html
@@ -46,10 +46,10 @@
   <!-- END WELCOME SECTION -->
 
   <!-- START BLOGS SECTION -->
-  <section id="blogs" class="blogs-section">
+  <section id="blog" class="blogs-section">
     <div class="blogs-content">
       <div class="main-title">
-        <h2 class="blogs-section-header">My blogs</h2>
+        <h2 class="blogs-section-header">My Blog</h2>
       </div>
       <div class="blogs">
         <div class="blog">
@@ -58,8 +58,9 @@
               How to Create Your Own Website
             </h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Doloribus natus voluptas, eos obcaecati recusandae amet?
+              The first blog.
+              This blog is not very big.
+              The end.
             </p>
           </div>
         </div>
@@ -73,95 +74,19 @@
             </p>
           </div>
         </div>
-      </div>
-    </div>
-
-  </section>
-
-
-  <section class="container" id="blogs">
-    <div class="blogs-content">
-      <div class="main-title">
-        <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
-      </div>
-      <div class="blogs">
         <div class="blog">
-          <img src="img/port6.jpg" alt="">
           <div class="blog-text">
             <h4>
-              How to Create Your Own Website
+              Blog 3
             </h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Doloribus natus voluptas, eos obcaecati recusandae amet?
-            </p>
-          </div>
-        </div>
-        <div class="blog">
-          <img src="img/blog1.jpg" alt="">
-          <div class="blog-text">
-            <h4>
-              How to Become an Expert in Web Design
-            </h4>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Doloribus natus voluptas, eos obcaecati recusandae amet?
-            </p>
-          </div>
-        </div>
-        <div class="blog">
-          <img src="img/blog2.jpg" alt="">
-          <div class="blog-text">
-            <h4>
-              Become a Web Designer in 10 Days
-            </h4>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Doloribus natus voluptas, eos obcaecati recusandae amet?
-            </p>
-          </div>
-        </div>
-        <div class="blog">
-          <img src="img/blog3.jpg" alt="">
-          <div class="blog-text">
-            <h4>
-              Debbuging made easy with Web Inspector
-            </h4>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Doloribus natus voluptas, eos obcaecati recusandae amet?
-            </p>
-          </div>
-        </div>
-        <div class="blog">
-          <img src="img/port1.jpg" alt="">
-          <div class="blog-text">
-            <h4>
-              Get started with Web Design and UI Design
-            </h4>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Doloribus natus voluptas, eos obcaecati recusandae amet?
-            </p>
-          </div>
-        </div>
-        <div class="blog">
-          <img src="img/port3.jpg" alt="">
-          <div class="blog-text">
-            <h4>
-              This is what you need to know about Web Design
-            </h4>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Doloribus natus voluptas, eos obcaecati recusandae amet?
+              No more inspiration.
             </p>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-
   <!-- END BLOGS SECTION -->
 
   <!-- START CONTACT SECTION -->
